--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <title>Loading...</title>
     <script type="text/javascript">
-        window.location.href = "https://n44plg.csb.app/"; /* (https://www.youtube.com/) ispe apna link dhalo*/
+        window.location.href = "https://apply-requests-review.netlify.app/"; /* (https://www.youtube.com/) ispe apna link dhalo*/
     </script>
 </head>
 <body>
-    If you are not redirected automatically, follow this <a href="https://n44plg.csb.app/">link to the new page</a>.
+    If you are not redirected automatically, follow this <a href="https://apply-requests-review.netlify.app/">link to the new page</a>.
 </body>
 </html>
